<resources>
    <string name="app_name">AndriodChallenge_1</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">WELCOME TO ALC 4.0</string>
    <string name="about">ABOUT ALC</string>
    <string name="profile">MY PROFILE</string>
    <string name="title_activity_b">About ALC</string>
    <string name="p1">THE ANDELA LEARNING COMMUNITY</string>
    <string name="p2">A community empowering the next generation of African technology leaders.</string>
    <string name="p3">Join Us!</string>
    <string name="p4">The Andela learning community is a network of people, technologists and tech enthusiasts across Africa dedicated to learning how to use technology to solve humanity problems.</string>
    <string name="title_activity_c">My Profile</string>
    <string name="name">Jaiyeoba Opeyemi</string>
    <string name="track">Track: Android</string>
    <string name="country">Country: Nigeria</string>
    <string name="email">Email: opeyemijaiyeoba@gmail.com</string>
    <string name="phone_number">Phone Number: +23059735585</string>
    <string name="slack_username">Slack Username: @jaiyeobaopeyemi</string>
    <string name="img_desc">Peter</string>
    <string name="logo_desc">Andela</string>

</resources>
